--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,28 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+
+# build file
+
+*.in
+*~
+/config.guess
+/config.h
+/config.h.in
+/config.log
+/config.nice
+/config.status
+/config.sub
+/configure
+/Makefile.fragments
+/Makefile.global
+/Makefile.objects
+/autom4te.cache
+/configure.ac
+/.libs/
+/build
+/libtool
+make.sh
+/Makefile
+
